# TimeSync

./: CMakeLists.txt  Date.cpp  Date.h  DetailedEventView.qml  Event.cpp  Event.h  EventCalendar.qml  EventCreationForm.qml  EventManager.cpp  EventManager.h  EventManger.h  EventModel.qml  EventView.qml  Main.qml  MenuForm.qml  Q_Event.cpp  Q_Event.h  README.md  Task.cpp  Task.h  Time_utils.cpp  Time_utils.h  calendarone.cpp  main.cpp  menu.cpp  menu.h  monthcalendar.cpp  monthcalendar.h
